--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,7 +1,7 @@
 Hello world
 
-<div ng-app="deviseApp">
+<%= content_for(:angular_app) do %>
+  ng-app="deviseApp"
+<% end %>
 
-  <div ui-view></div>
-
-</div>
+<div ui-view></div>
